--- a/13_tempwork/templates/tablified.html
+++ b/13_tempwork/templates/tablified.html
@@ -5,12 +5,12 @@
     </head>
 
     <body>
-        <h1> job </h1>
+        <h1> {{ Job }} </h1>
 
         <table>
              <tr><th> {{ Occ }} </th></tr>
              {% for item in collection %}
-                 <tr><td>{{ item }}</tr></td>
+                 <tr><td>{{ item[0] }}</td> <td>{{ item[1] }}</td></tr>
   
             {% endfor %}
         </table>
