updated with newest work

--- a/13_tempwork/templates/tablified.html
+++ b/13_tempwork/templates/tablified.html
@@ -1,3 +1,12 @@
+<!-- 
+ Wen Zhang, Jackie Zeng, Danny Huang
+Made in Africa
+SoftDev
+K13 -- creating template to make html table
+2024-09-30
+Time spent: 30 mins-->
+
+
 <!DOCTYPE html>
 <html>
     <head>
@@ -12,7 +21,7 @@
         <table>
              <tr><th> {{ Occ }} </th></tr>
              {% for item in collection %}
-                 <tr><td>{{ item[0] }}</td> <td>{{ item[1] }}</td></tr>
+                 <tr><td>{{ item[0] }}</td> <td><a href="{{ item[2] }}">{{ item[2] }}</a></td><td>{{ item[1] }}</td></tr>
   
             {% endfor %}
         </table>
