added post and get notes

--- a/15_flask-form/templates/response.html
+++ b/15_flask-form/templates/response.html
@@ -14,5 +14,40 @@
     <h2>
       What's good {{ username }}
     </h2>
-  </body>
 
+    <h3>
+      Method Used: Get
+    </h3>
+
+    <table>
+      <tr>
+        <th>
+          Get
+        </th>
+        <th>
+          Post
+        </th>
+      </tr>
+      <tr>
+        <td>URL can be seen</td>
+        <td>URL cannot be seen</td>
+      </tr>
+      <tr>
+        <td>Unsecure method</td>
+        <td>Unsecure Method</td>
+      </tr>
+      <tr>
+        <td>Default Method</td>
+        <td>Needs to be specified to be used; does not work for all sites</td>
+      </tr>
+      <tr>
+        <td>Has a size limit of 2048 characters</td>
+        <td>Does not have a size limit</td>
+      </tr>
+      <tr>
+        <td>Typically used to retrieve information from a server</td>
+        <td>Typically used to update a resource</td>
+      </tr>
+    </table>
+  </body>
+</html>
