--- a/16_flask-session/templates/response.html
+++ b/16_flask-session/templates/response.html
@@ -23,7 +23,7 @@
 
 
   <p>Team Made in China</p>
-  <p></p>
+  <p>Wen Zhang, Jacky Zeng, Yinwei Zhang</p>
 
 <form action="/logout" method="GET">
     <button type="submit">Logout</button>
