--- a/17_style-layer/style.css
+++ b/17_style-layer/style.css
@@ -65,3 +65,11 @@ header h1 {
     margin-bottom: 20px;
     color: black;
 }
+
+footer {
+    background-color: #565757;
+    padding: 15px;
+    font-size: 18px;
+    text-align: right;
+    color: gray;
+}
